--- a/PaulVacationTracker/app/src/main/res/values/strings.xml
+++ b/PaulVacationTracker/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">PaulVacationTracker</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_employee_vacation_detail">EmployeeVacationDetailActivity</string>
+    <string name="title_activity_employee_vacation_detail">Employee Vacation</string>
 </resources>
